# chord-chart-tokenizer

./: .gitignore  README.md  REPORT.md  TODO.md  cabal.project  debug.txt
byte-pair-encoder/: CHANGELOG.md  README.md  TODO.md  byte-pair-encoder.cabal  package.yaml  stack.yaml
byte-pair-encoder/app/: Main.hs
byte-pair-encoder/exe/: Main.hs
byte-pair-encoder/lib/: Common.hs  StateSaver.hs  TokenToBlock.hs  Tokenizer.hs  TokenizerTriple.hs
byte-pair-encoder/report-exe/: Main.hs
byte-pair-encoder/src/: Lib.hs  StateSaver.hs  Tokenizer.hs  TokenizerNew.hs
byte-pair-encoder/test/: Spec.hs
byte-pair-encoder/test/dict/: songs_dict.txt  songs_reduced_dict.txt
byte-pair-encoder/test/dictionaries/: long_text.txt
byte-pair-encoder/test/texts/: tokenizer_input_songs.txt  tokenizer_input_songs_trivial_norepeats.txt
data/known-blocks/: blocks-norm-notation.txt  named-block-tokens.txt  original-blocks.txt
data/relative-notations/: rel-not-trivial.txt  rel.txt  tokenizer_input_songs_trivial.txt
data/tokens/: test.txt  tokens.txt
raw-songs-handler/: raw-songs-handler.cabal
raw-songs-handler/exe/: Main.hs
raw-songs-handler/lib/: Chords.hs  Songs.hs
raw-songs-handler/test/: Spec.hs
songs-handler/: songs-handler.cabal
songs-handler/exe/: Main.hs
songs-handler/lib/: Chords.hs  SplitByTokens.hs
songs-handler/relative-notation/: Main.hs
songs-tokenizer/: songs-tokenizer.cabal
songs-tokenizer/exe/: Main.hs
songs-tokenizer/lib/: ColoredView.hs  ReportCreator.hs  SongsReportCreator.hs  SplitByTokens.hs
songs-tokenizer/test/: Spec.hs
token-creator/: token-creator.cabal
token-creator/exe/: Main.hs
token-creator/lib/: ReportCreator.hs  TokenCreator.hs  TokenReportCreator.hs  TokenToBlock.hs
