cabal-version:      3.4
name:               byte-pair-encoder
version:            0.1.0.0
license:            BSD-3-Clause
author:             George Gerasev
maintainer:         george30032002@gmail.com
build-type:         Simple

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:
        StateSaver
        Tokenizer
    build-depends:
          base >=4.7 && <5
        , containers
        , split
        , extra
        , hashable
    hs-source-dirs:   lib
    default-language: Haskell2010

executable byte-pair-encoder
    import:           warnings
    main-is:          Main.hs
    build-depends:
          base >=4.7 && <5
        , cmdargs
        , byte-pair-encoder
    hs-source-dirs:   exe
    default-language: Haskell2010

test-suite byte-pair-encoder-test
    import:           warnings
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Spec.hs
    build-depends:
        base >=4.7 && <5
      , tasty
      , tasty-hunit
      , byte-pair-encoder
