cabal-version:      3.0
name:               songs-handler
version:            0.1.0.0
license-file:       LICENSE
author:             George Gerasev
maintainer:         george30032002@gmail.com
build-type:         Simple


common warnings
    ghc-options: -Wall

executable songs-handler
    import:           warnings
    main-is:          Main.hs
    build-depends:
          base
        , directory
        , filepath
        , aeson
        , split
        , containers
    hs-source-dirs:   exe
    default-language: Haskell2010
