cabal-version:      3.0
name:               songs-handler
version:            0.1.0.0
license-file:       LICENSE
author:             George Gerasev
maintainer:         george30032002@gmail.com
build-type:         Simple


common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:
        SplitByTokens
        Chords
    build-depends:
          base >=4.7 && <5
        , byte-pair-encoder
        , aeson
        , containers
        , safe
        , split
        , extra
        , hashable
    hs-source-dirs:   lib
    default-language: Haskell2010

executable songs-handler
    import:           warnings
    main-is:          Main.hs
    build-depends:
          base
        , songs-handler
        , byte-pair-encoder
        , directory
        , filepath
        , aeson
        , split
        , containers
    hs-source-dirs:   exe
    default-language: Haskell2010
